--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <style>
+      #initial-loader {
+        position: fixed;
+        inset: 0;
+        background: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 99999;
+      }
+
+      #initial-loader img {
+        width: 150px;
+        height: auto;
+      }
+    </style>
   </head>
   <body class="dark:bg-gray-900">
-    <div id="root"></div>
+    <div id="root">
+      <div id="initial-loader">
+        <img src="./loader.gif" alt="Loading..." />
+      </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
